// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard > renders Featured as expected 1`] = `
<div>
  <div
    class="course-card--featured container-lined px-8 pb-4 max-w-[646px]"
  >
    <p
      class="course-card__featured-label uppercase font-semibold"
    >
      Featured course
    </p>
    <img
      alt="Course Card Placeholder"
      class="course-card__image w-full h-[165px] object-cover rounded-lg"
      src="/images/courses/course.jpg"
    />
    <h3
      class="course-card__title text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Title
    </h3>
    <p
      class="course-card__description text-bluedot-darker text-md mb-4 line-clamp-6"
    >
      Description
    </p>
    <div
      class="course-card__metadata flex justify-between items-center"
    >
      <p
        class="course-card__metadata-item text-left text-xs"
      >
        5 days
      </p>
      <span
        class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light text-black course-card__application-deadline"
        role="status"
      >
        Apply now
      </span>
    </div>
  </div>
</div>
`;

exports[`CourseCard > renders default as expected 1`] = `
<div>
  <a
    class="card flex flex-col items-start transition-transform duration-200 course-card container-lined p-5 max-w-[323px] hover:scale-[1.01]"
    href="#"
  >
    <div
      class="card__image-container max-w-[323px] max-h-[223px] w-full mb-3"
    >
      <img
        alt="Title"
        class="card__image w-full max-h-full object-cover rounded-2xl course-card__image w-full h-[165px] object-cover rounded-xl"
        src="/images/courses/course.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
    >
      <div
        class="card__text"
      >
        <h2
          class="card__title text-2xl font-semibold text-bluedot-darker mb-1"
        >
          Title
        </h2>
        <p
          class="card__subtitle text-base text-black"
        >
          Description
        </p>
      </div>
      <div
        class="card__cta-row flex items-center justify-between mt-auto"
      >
        <p
          class="card__cta-metadata text-left text-xs text-black"
        >
          5 days
        </p>
        <span
          class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light text-black card__cta--inert hover:bg-bluedot-lighter"
          role="status"
        >
          Apply now
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`CourseCard > renders with optional args 1`] = `
<span
  class="tag inline-flex items-center px-4 py-1.5 rounded-lg text-xs font-semibold border border-bluedot-light text-black card__cta--inert hover:bg-bluedot-lighter"
  role="status"
>
  Apply by Feb 1
</span>
`;

exports[`CourseCard > renders with optional args 2`] = `null`;

exports[`CourseCard > renders with optional args 3`] = `
<img
  alt="Title"
  class="card__image w-full max-h-full object-cover rounded-2xl course-card__image w-full h-[165px] object-cover rounded-xl"
  src="/images/team/custom-size.jpg"
/>
`;
